# zephyrus-sc2-parser

./: .coverage  .flake8  .gitignore  ARCHITECTURE.md  Deathaura.SC2Replay  LICENSE  LICENSE.txt  README.md  __init__.py  base_ability_data.py  base_building_data.py  base_unit_data.py  base_upgrade_data.py  events.py  generate_gamedata.py  parser.py  protocols.py  pyproject.toml  requirements.txt  setup.py  utils.py
.github/workflows/: publish-to-pypi.yml
events/: __init__.py  ability_event.py  base_event.py  camera_update_event.py  control_group_event.py  object_event.py  player_stats_event.py  selection_event.py  upgrade_event.py
game/: game.py  game_obj.py  perception_action_cycle.py  player.py  player_state.py
gamedata/: ability_data.py  building_data.py  unit_data.py  upgrade_data.py
s2protocol_fixed/: decoders.py  encoders.py  s2_cli.py
s2protocol_fixed/versions/: protocol15405.py  protocol16755.py  protocol17326.py  protocol18468.py  protocol19132.py  protocol19679.py  protocol22612.py  protocol23260.py  protocol24944.py  protocol26490.py  protocol27950.py  (+7 more)
tests/: test_create_bitmask.py  test_parser.py  test_perception_action_cycle.py  test_player_state.py  test_player_stats_event.py  test_selection_event.py  test_utils.py
version_data/: 44401_abilities.csv  44401_units.csv  80949_abilities.csv  80949_units.csv  81102_abilities.csv  81102_units.csv  83830_abilities.csv  87702_abilities.csv  88500_abilities.csv
zephyrus_sc2_parser/: __init__.py  constants.py  dataclasses.py  defaults.py  exceptions.py  parser.py  requirements.txt  utils.py
(+385 files in other folders)
